--- a/package.json
+++ b/package.json
@@ -9,5 +9,22 @@
   },
   "devDependencies": {
     "typescript": "^4.5.2"
-  }
+  },
+  "name": "spt",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Sennnnnnnnnnnnn/Discord_APIViettel.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Sennnnnnnnnnnnn/Discord_APIViettel/issues"
+  },
+  "homepage": "https://github.com/Sennnnnnnnnnnnn/Discord_APIViettel#readme",
+  "description": ""
 }
