--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "name": "testing_bot",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": "16.x"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
